# XKService

./: .gitignore  CHANGELOG  CMakeLists.txt  CMakeLists.txt.user.1.3  Settings.example  TODO  alert_defs.h  main.cpp  resource.h  service.cpp  service.h  xtremek-service
cmake/: FindPQXX.cmake~
cmake/modules/: FindODBC.cmake  FindODBCXX.cmake  FindPQXX.cmake
common/: database.cpp  database.h  log.cpp  log.h  utils.h
